[tool.poetry]
name = "cfaccess-auth-provider"
version = "1.0.0"
description = ""
authors = ["junosuarez"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
homeassistant = "^2024.11.2"
pylint = "*"
black = "*"
isort = "*"

[tool.pylint.master]
disable = [
    "protected-access"
]

[tool.isort]
line_length = 100

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
